# DAW-Project

./: DAW Project Tasks.docx  README.md  fileImplementation.cpp
DAW/: CMakeLists.txt  QLRClickButton.cpp  QLRClickButton.h  Track 2.m4a  Track 3.m4a  Track 4.m4a  TrackFIle.cpp  TrackFIle.h  TrackGUI.cpp  TrackGUI.h  audiolevel.h  audiorecorder.cpp  audiorecorder.h  audiorecorder.ui  cmake-build-debugTrack 1.m4a  cmake-build-debugTrack 2.m4a  mainwindow.cpp  mainwindow.h  mainwindow.ui  minesweeper.qrc
DAW/Projects/Demo Song/: Track 1.m4a  Track 3.m4a  Track 4.m4a  Track 5.m4a  Track 6.m4a  Track 7.m4a  Track 8.m4a
DAW/Projects/Guitar Track Test/: Track 2.m4a  Track 3.m4a
DAW/Projects/NewWorld!!!/: Track 1.m4a  Track 3.m4a  Track 4.m4a
DAW/Projects/latency test/: Track 1.m4a  Track 2.m4a
Download me and Run my Executable/Projects/Demo Song/: Track 2.m4a
Download me and Run my Executable/Projects/Guitar Track Test/: Track 1.m4a
